upgrade fhevm to v0.9.1

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "compile": "hardhat compile",
+    "deploy:sepolia": "hardhat run scripts/deploy.js --network sepolia",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,7 +12,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@fhevm/solidity": "^0.8.0",
+    "@fhevm/solidity": "^0.9.1",
+    "@fhevm/hardhat-plugin": "^0.3.0-1",
     "@nomicfoundation/hardhat-ethers": "^3.1.0",
     "dotenv": "^17.2.3",
     "ethers": "^6.15.0",
